--- a/about.html
+++ b/about.html
@@ -5,5 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us</title>
   </head>
-  <body></body>
+  <body>
+    <!-- nav bar -->
+    <nav>
+      <div class="nav-links">
+        <ul>
+          <li><a class="atag" href="index.html">HOME</a></li>
+          <li><a class="atag" href="about.html">ABOUT US</a></li>
+          <li><a class="atag" href="resources.html">RESOURCES</a></li>
+          <li><a class="atag" href="getinvolved.html">GET INVOLVED</a></li>
+          <li><a class="atag" href="contact.html">CONTACT</a></li>
+        </ul>
+      </div>
+    </nav>
+  </body>
 </html>
