--- a/about.html
+++ b/about.html
@@ -18,5 +18,16 @@
         </ul>
       </div>
     </nav>
+
+    <article>
+      <section>
+        <h1 class="main"><strong>About Us</strong></h1>
+        <img
+          class="imgtop"
+          src="img/group of women .jpg"
+          alt="group_of_women"
+        />
+      </section>
+    </article>
   </body>
 </html>
