added mission and intro

--- a/about.html
+++ b/about.html
@@ -20,13 +20,24 @@
     </nav>
 
     <article>
+      <h1 class="main"><strong>About Us</strong></h1>
+      <img class="imgtop" src="img/group of women .jpg" alt="group_of_women" />
       <section>
-        <h1 class="main"><strong>About Us</strong></h1>
-        <img
-          class="imgtop"
-          src="img/group of women .jpg"
-          alt="group_of_women"
-        />
+        <h2 class="abtus">Project Empower's Mission</h2>
+        <p class="mission">
+          Our mission is to address the challenges that domestic abuse survivors
+          face and link them with the resources they need to enable themselves
+          and move forward. We here at Project Empower believe that love
+          shouldn't hurt and that nobody is safe until everybody is.
+        </p>
+
+        <h2 class="abtus">Who are we?</h2>
+        <p class="mission">
+          We are a non-profit organization located in Charlotte NC. We provide
+          access to shelters, food, financial assistance, and health resources
+          to help recently emancipated, recovering, or currently resisting
+          domestic abuse survivors.
+        </p>
       </section>
     </article>
   </body>
