--- a/about.html
+++ b/about.html
@@ -39,6 +39,10 @@
           domestic abuse survivors.
         </p>
       </section>
+
+      <figure class="first">
+        <img class="hand" src="img/love_shouldnt_hurt.jpg" alt="hand_with_x" />
+      </figure>
     </article>
   </body>
 </html>
