--- a/about.html
+++ b/about.html
@@ -44,5 +44,40 @@
         <img class="hand" src="img/love_shouldnt_hurt.jpg" alt="hand_with_x" />
       </figure>
     </article>
+
+    <aside>
+      <h1 class="title">Statistics</h1>
+      <ul>
+        <li class="stat">
+          More than 1 in 3 women and more than 1 in 4 men in the U.S. will
+          experience rape, physical violence, and/ or stalking by an intimate
+          partner in their lifetime.
+        </li>
+        <li class="stat">
+          1 in 4 gay men, 1 in 3 bisexual men, and 3 in 10 heterosexual men will
+          experience rape, physical violence, and/or stalking by an intimate
+          partner in their lifetime.
+        </li>
+        <li class="stat">
+          On average, nearly 20 people per minute are physically abused by an
+          intimate partner in the United States.
+        </li>
+        <li class="stat">
+          Intimate partner violence accounts for 15% of all violent crimes.
+        </li>
+        <li class="stat">
+          Domestic victimization is correlated with a higher rate of depression
+          and suicidal behavior.
+        </li>
+        <li class="stat">
+          1 in 15 children are exposed to intimate partner violence each year,
+          and 90% of these children are eyewhitnesses to this violence.
+        </li>
+        <li class="stat">
+          Victims of intimate partner violence lose a total of 8.0 million days
+          of paid work each year.
+        </li>
+      </ul>
+    </aside>
   </body>
 </html>
