added help info

--- a/about.html
+++ b/about.html
@@ -79,5 +79,12 @@
         </li>
       </ul>
     </aside>
+
+    <aside class="tip">
+      <p>
+        For anonymous, confidential help, call the National Domestic Violence
+        Hotline at 1-800-799-7233 (SAFE) now.
+      </p>
+    </aside>
   </body>
 </html>
