--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <head>
     <meta name="viewport" content="with=device-width, initial-scale 1.0"> 
       <title>Contact Page</title>
-      <link rel="stylesheet" href="styles.css">
+      <link rel="stylesheet" href="contact.css">
       <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@324&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
   </head>
