linked the ge involved

--- a/getinvolved.html
+++ b/getinvolved.html
@@ -4,7 +4,7 @@
 
 <head>
 
-	<link rel="stylesheet" href="getin.css">
+	<link rel="stylesheet" href="getinvolved.css">
 
 	<title>Project Empower</title>
 
