--- a/getinvolved.html
+++ b/getinvolved.html
@@ -5,6 +5,8 @@
 <head>
 
 	<link rel="stylesheet" href="getinvolved.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@324&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<title>Project Empower</title>
 
