added gradient effect

--- a/getinvolved.html
+++ b/getinvolved.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+ <div class="gradient">
 	<!-- Navigation Bar -->
   <nav>
     <div class="nav-links">
@@ -95,5 +96,8 @@
         <i class="fa fa-instagram fa-stack-1x"></i>
       </span>
     </a>
+    </footer>
+
+</div>
 </body>
 </html>
