--- a/about.html
+++ b/about.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@324&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
+    <link href="about.css" rel="stylesheet" type="text/css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us</title>
@@ -10,11 +20,11 @@
     <nav>
       <div class="nav-links">
         <ul>
-          <li><a class="atag" href="index.html">HOME</a></li>
-          <li><a class="atag" href="about.html">ABOUT US</a></li>
-          <li><a class="atag" href="resources.html">RESOURCES</a></li>
-          <li><a class="atag" href="getinvolved.html">GET INVOLVED</a></li>
-          <li><a class="atag" href="contact.html">CONTACT</a></li>
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="about.html">ABOUT US</a></li>
+          <li><a href="resources.html">RESOURCES</a></li>
+          <li><a href="getinvolved.html">GET INVOLVED</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
         </ul>
       </div>
     </nav>
@@ -41,7 +51,11 @@
       </section>
 
       <figure class="first">
-        <img class="hand" src="img/love_shouldnt_hurt.jpg" alt="hand_with_x" />
+        <img
+          class="imgtwo"
+          src="img/love_shouldnt_hurt.jpg"
+          alt="hand_with_x"
+        />
       </figure>
     </article>
 
@@ -86,5 +100,47 @@
         Hotline at 1-800-799-7233 (SAFE) now.
       </p>
     </aside>
+
+    <footer>
+      <p class="copy">Copyright &copy; 2021, Cohort 9</p>
+
+      <aside class="social">
+        <a
+          class="social"
+          href="www.twitter.com"
+          target="_blank"
+          aria-label="Twitter"
+        >
+          <span class="fa-stack fa-1x sizeup">
+            <i class="fa fa-circle-thin fa-stack-2x"></i>
+            <i class="fa fa-twitter fa-stack-1x"></i>
+          </span>
+        </a>
+
+        <a
+          class="social"
+          href="www.facebook.com"
+          target="_blank"
+          aria-label="Facebook"
+        >
+          <span class="fa-stack fa-1x sizeup">
+            <i class="fa fa-circle-thin fa-stack-2x"></i>
+            <i class="fa fa-facebook fa-stack-1x"></i>
+          </span>
+        </a>
+
+        <a
+          class="social"
+          href="www.instagram.com"
+          target="_blank"
+          aria-label="Instagram"
+        >
+          <span class="fa-stack fa-1x sizeup">
+            <i class="fa fa-circle-thin fa-stack-2x"></i>
+            <i class="fa fa-instagram fa-stack-1x"></i>
+          </span>
+        </a>
+      </aside>
+    </footer>
   </body>
 </html>
