added name to nav bar

--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
   <body>
     <!-- nav bar -->
     <nav>
+      <h1 class="name">Project Empower</h1>
       <div class="nav-links">
         <ul>
           <li><a href="index.html">HOME</a></li>
