--- a/getinvolved.html
+++ b/getinvolved.html
@@ -13,9 +13,11 @@
 </head>
 
 <body>
+   
  <div class="gradient">
 	<!-- Navigation Bar -->
   <nav>
+    <h1 class="name">Project Empower</h1>
     <div class="nav-links">
       <ul>
         <li><a href="index.html">HOME</a></li>
@@ -36,9 +38,6 @@
   <div class="overlay">
     <h4><a href="https://forms.gle/DUwmW97PpbDR1pHM8">Volunteer Form</a></h4>
     <p class="text">Be part of our team. Work with our staff at Project Empower to help victims of abuse and their children. You’ll provide services to victims of domestic violence and their children served through our programs. You’ll provide assistance to residents, respond to hotline and other calls, and help with facility oversight.
-    <ul>
-    <li>All volunteers must complete a volunteer signup form, a volunteer waiver form, and a volunteer confidentiality agreement. Follow the links at the top of this section to complete the form</li>
-    </ul>
     </p>
   </div>
   </div>
@@ -51,9 +50,6 @@
 <div class="overlay">
     <h4><a href="https://forms.gle/uQVFhBrHrQLDKtQ37">Professional Volunteer Form</a></h4>
     <p class="text">Use your professional skills and knowledge on an as-needed basis to provide your expertise in areas such as health, legal, graphic design, photography, marketing and much more. Abuse victims need a professional team in their corner that will support them in their journey to become empowered.
-    <ul>
-      <li>All volunteers must complete a volunteer signup form, a volunteer waiver form, and a volunteer confidentiality agreement. Follow the links at the top of this section to complete the form</li>
-    </ul>
     </p>
 </div>
 </div>
@@ -76,6 +72,7 @@
 <footer>
   <p class="footer1">Copyright &copy; 2021, Cohort 9</p>
 
+  <aside>
     <a class="social" href="www.twitter.com"  target="_blank" aria-label="Twitter">
       <span class="fa-stack fa-1x sizeup">
         <i class="fa fa-circle-thin fa-stack-2x"></i>
@@ -96,6 +93,7 @@
         <i class="fa fa-instagram fa-stack-1x"></i>
       </span>
     </a>
+  </aside>
     </footer>
 
 </div>
