finalized contact page code

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="with=device-width, initial-scale 1.0"> 
       <title>Contact Page</title>
       <link rel="stylesheet" href="contact.css">
+      <meta charset="UTF-8" />
       <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@324&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
   </head>
