--- a/resources.html
+++ b/resources.html
@@ -100,7 +100,7 @@
       <aside class="recovery">
         <h4> If you are the victim of domestic abuse, your personal safety must take priority over any feelings you may have for the perpetrator. Our "Recovery Program" can help establish a recovery plan that will help individuals in an abusive relationship move forward with their lives, away from toxic and dangerous relationships. Treatment programs and other domestic abuse resources are available to help you find safety and healing. The recovery offer: 
           <ul>
-            <li>Proffessional assistance for mental health.</li>
+            <li>Professional assistance for mental health.</li>
             <li> Help to find a new job.</li>
             <li> Relocation.</li>
             <li> Follow up </li>
