added footer to contact

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,10 @@
       <meta charset="UTF-8" />
       <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@324&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
+
+
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   </head>
   <body>
     <section class="header">
@@ -65,3 +69,53 @@
 
   </section>
   </div>
+
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  
+
+  <footer>
+     
+
+    <p class="foot">Copyright &copy; 2021, Cohort 9</p>
+    <aside>
+      <a class="social" href="www.twitter.com"  target="_blank" aria-label="Twitter">
+        <span class="fa-stack fa-1x sizeup">
+          <i class="fa fa-circle-thin fa-stack-2x"></i>
+          <i class="fa fa-twitter fa-stack-1x"></i>
+        </span>
+      </a>
+
+      <a class="social" href="www.facebook.com"  target="_blank" aria-label="Facebook">
+        <span class="fa-stack fa-1x sizeup">
+          <i class="fa fa-circle-thin fa-stack-2x"></i>
+          <i class="fa fa-facebook fa-stack-1x"></i>
+        </span>
+      </a>
+
+      <a class="social" href="www.instagram.com"  target="_blank" aria-label="Instagram">
+        <span class="fa-stack fa-1x sizeup">
+          <i class="fa fa-circle-thin fa-stack-2x"></i>
+          <i class="fa fa-instagram fa-stack-1x"></i>
+        </span>
+      </a>
+       </aside> 
+  </footer> 
+
+  </body>
+
+
+ 
+
+
+
+</html>
