--- a/getinvolved.html
+++ b/getinvolved.html
@@ -34,7 +34,7 @@
   <!-- get involved one -->
 <section>
   <div class="container">
-		<img src="img/volunteer3.jpg" alt="volunteer" class="image" width="480" height="350">
+		<img src="img/volunteer3.bmp" alt="volunteer" class="image" width="480" height="350">
   <div class="overlay">
     <h4><a class="forms" href="https://forms.gle/DUwmW97PpbDR1pHM8">Volunteer Form</a></h4>
     <p class="text">Be part of our team. Work with our staff at Project Empower to help victims of abuse and their children. You’ll provide services to victims of domestic violence and their children served through our programs. You’ll provide assistance to residents, respond to hotline and other calls, and help with facility oversight.
@@ -46,7 +46,7 @@
 <!-- get involved two -->
 <section>
 <div class="container">
-  <img src="img/professionalvolunteer.jpg" alt="doctor" class="image" width="480" height="350">
+  <img src="img/professionalvolunteer.bmp" alt="doctor" class="image" width="480" height="350">
 <div class="overlay">
     <h4><a class="forms" href="https://forms.gle/uQVFhBrHrQLDKtQ37">Professional Volunteer Form</a></h4>
     <p class="text">Use your professional skills and knowledge on an as-needed basis to provide your expertise in areas such as health, legal, graphic design, photography, marketing and much more. Abuse victims need a professional team in their corner that will support them in their journey to become empowered.
@@ -58,7 +58,7 @@
 <!-- donate -->
 <section>
 <div class="container">
-  <img src="img/donate0.jpg" alt="donate" class="image" width="480" height="350">
+  <img src="img/donate0.bmp" alt="donate" class="image" width="480" height="350">
 <div class="overlay">
    <h4><a class="forms" href="https://www.paypal.com/us/home">Donate</a></h4>
     <p class="text">Depending on the situation, a survivor may be financially dependent on an abusive partner or otherwise lacking access to material resources. One of the most immediate ways you can support someone experiencing relationship abuse is by helping them with their material needs.
